@@ -3154,6 +3154,48 @@ class Test_notebooks( Test_controller ):
     # before_position should be ignored for such notebooks
     self.test_save_new_note_in_notebook_with_read_write_for_own_notes( after_note_id, before_note_id )
 
+  def test_save_new_note_with_allowed_tags( self ):
+    self.login()
+
+    # save a completely new note
+    title_with_tags = u"<h3>my funny title</h3>"
+    body = u"<p>this is a <b>note</b></p>"
+    new_note = Note.create( "55", title_with_tags + body )
+    previous_revision = new_note.revision
+
+    result = self.http_post( "/notebooks/save_note/", dict(
+      notebook_id = self.notebook.object_id,
+      note_id = new_note.object_id,
+      contents = new_note.contents,
+      startup = False,
+      previous_revision = None,
+    ), session_id = self.session_id )
+
+    assert result[ "new_revision" ]
+    assert result[ "new_revision" ] != previous_revision
+    assert result[ "new_revision" ].user_id == self.user.object_id
+    assert result[ "new_revision" ].username == self.username
+    assert result[ "previous_revision" ] == None
+    user = self.database.load( User, self.user.object_id )
+    assert user.storage_bytes > 0
+    assert result[ "storage_bytes" ] == user.storage_bytes
+    assert result[ "rank" ] == 0.0
+
+    # make sure the new title is now loadable
+    result = self.http_post( "/notebooks/load_note_by_title/", dict(
+      notebook_id = self.notebook.object_id,
+      note_title = new_note.title,
+    ), session_id = self.session_id )
+
+    note = result[ "note" ]
+
+    expected_contents = title_with_tags + body
+
+    assert note.object_id == new_note.object_id
+    assert note.title == new_note.title
+    assert note.contents == expected_contents
+    assert note.user_id == self.user.object_id
+
   def test_save_new_note_with_disallowed_tags( self ):
     self.login()
 
@@ -3234,6 +3276,48 @@ class Test_notebooks( Test_controller ):
     note = result[ "note" ]
 
     expected_contents = title_with_tags + u"fooms word!blahhm"
+
+    assert note.object_id == new_note.object_id
+    assert note.title == new_note.title
+    assert note.contents == expected_contents
+    assert note.user_id == self.user.object_id
+
+  def test_save_new_note_with_unknown_tags( self ):
+    self.login()
+
+    # save a completely new note
+    title_with_tags = u"<h3>my funny title</h3>"
+    junk = u"foo<whee>blah</whee>bar"
+    new_note = Note.create( "55", title_with_tags + junk )
+    previous_revision = new_note.revision
+
+    result = self.http_post( "/notebooks/save_note/", dict(
+      notebook_id = self.notebook.object_id,
+      note_id = new_note.object_id,
+      contents = new_note.contents,
+      startup = False,
+      previous_revision = None,
+    ), session_id = self.session_id )
+
+    assert result[ "new_revision" ]
+    assert result[ "new_revision" ] != previous_revision
+    assert result[ "new_revision" ].user_id == self.user.object_id
+    assert result[ "new_revision" ].username == self.username
+    assert result[ "previous_revision" ] == None
+    user = self.database.load( User, self.user.object_id )
+    assert user.storage_bytes > 0
+    assert result[ "storage_bytes" ] == user.storage_bytes
+    assert result[ "rank" ] == 0.0
+
+    # make sure the new title is now loadable
+    result = self.http_post( "/notebooks/load_note_by_title/", dict(
+      notebook_id = self.notebook.object_id,
+      note_title = new_note.title,
+    ), session_id = self.session_id )
+
+    note = result[ "note" ]
+
+    expected_contents = title_with_tags + u"fooblahbar"
 
     assert note.object_id == new_note.object_id
     assert note.title == new_note.title
